# litestar-tutorial

./: .gitignore  readme.md
initial/: app.py  pyproject.toml  readme.md  test.sqlite
step1/: main.py  pyproject.toml  readme.md  requirements.txt
step1/controller/: author.py
step1/model/: author.py  book.py
step2/: common.py  pyproject.toml  readme.md
step2/controller/: author.py
step2/model/: author.py
step3/: main.py  pyproject.toml  readme.md  requirements.txt
step3/controller/: author.py
step4/: main.py  pyproject.toml  readme.md
step4/controller/: author.py  book.py
step4/model/: author.py  book.py
step5/: main.py  pyproject.toml  readme.md  requirements.txt
step5/controller/: author.py  book.py
step5/model/: author.py  book.py
