[tool.poetry]
name = "litestarsample"
version = "0.1.0"
description = ""
authors = ["Pete Letkeman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.5.2"}
litestar = {extras = ["full", "sqlalchemy", "Brotli"], version = "^2.4.4"}
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
Brotli = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
